--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@tanstack/react-query": "^5.28.9",
+		"@tanstack/react-query-devtools": "^5.28.10",
 		"@tanstack/react-router": "^1.22.9",
 		"appwrite": "^14.0.0",
 		"class-variance-authority": "^0.7.0",
