--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tooltip": "^1.0.7",
 		"@tanstack/react-query": "^5.28.9",
 		"@tanstack/react-query-devtools": "^5.28.10",
 		"@tanstack/react-router": "^1.22.9",
