--- a/biome.json
+++ b/biome.json
@@ -1,15 +1,19 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.6.3/schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true
-		}
-	},
-	"files": {
-		"ignore": ["appwrite.template.json", "src/routeTree.gen.ts"]
-	}
+  "$schema": "https://biomejs.dev/schemas/1.6.3/schema.json",
+  "formatter": {
+    "indentStyle": "space",
+    "indentWidth": 2
+  },
+  "organizeImports": {
+    "enabled": true
+  },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true
+    }
+  },
+  "files": {
+    "ignore": ["appwrite.template.json", "src/routeTree.gen.ts"]
+  }
 }
