--- a/appwrite.template.json
+++ b/appwrite.template.json
@@ -36,7 +36,7 @@
                     "type": "string",
                     "status": "available",
                     "error": "",
-                    "required": true,
+                    "required": false,
                     "array": false,
                     "size": 50,
                     "default": null
@@ -269,7 +269,7 @@
                     "required": false,
                     "array": false,
                     "min": 0,
-                    "max": 1,
+                    "max": 100,
                     "default": 0
                 },
                 {
@@ -313,7 +313,7 @@
                     "type": "string",
                     "status": "available",
                     "error": "",
-                    "required": true,
+                    "required": false,
                     "array": false,
                     "size": 250,
                     "default": null
@@ -323,7 +323,7 @@
                     "type": "string",
                     "status": "available",
                     "error": "",
-                    "required": true,
+                    "required": false,
                     "array": false,
                     "size": 250,
                     "default": null
